fix tooltip alignment

--- a/src/theme/style-overrides.less
+++ b/src/theme/style-overrides.less
@@ -507,3 +507,7 @@
 {
     background-color: @secondaryVariant7;
 }
+.ant-tooltip-inner
+{
+    text-align: inherit !important;
+}
